<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_275"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_bar"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_20"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="@dimen/layout_250"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_listen_now"
                android:layout_width="@dimen/layout_110"
                android:layout_height="@dimen/layout_90"
                android:clickable="true"
                android:onClick="onClick"
                android:src="@drawable/bt_listennow" />

            <TextView
                style="@style/styleTextView_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_10"
                android:text="@string/s_listen_now" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_250"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/layout_10"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_merchandise"
                android:layout_width="@dimen/layout_110"
                android:layout_height="@dimen/layout_90"
                android:clickable="true"
                android:onClick="onClick"
                android:src="@drawable/bt_merchandise" />

            <TextView
                style="@style/styleTextView_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_10"
                android:text="@string/s_merchandise" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_200"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/layout_10"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_bio"
                android:layout_width="@dimen/layout_100"
                android:layout_height="@dimen/layout_90"
                android:clickable="true"
                android:onClick="onClick"
                android:src="@drawable/bt_merchandise" />

            <TextView
                style="@style/styleTextView_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_10"
                android:text="@string/s_bio" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/layout_275"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_watch_now"
                android:layout_width="@dimen/layout_100"
                android:layout_height="@dimen/layout_90"
                android:clickable="true"
                android:onClick="onClick"
                android:src="@drawable/bt_watch_now" />

            <TextView
                style="@style/styleTextView_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_10"
                android:text="strings_watch" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>