<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_200"
            android:background="#d5d5d5"
            android:padding="@dimen/layout_20" >

            <TextView
                android:id="@+id/tv_title_details"
                style="@style/styleTextView_row"
                android:layout_width="@dimen/layout_700"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:lines="2"
                android:maxLines="2"
                android:text="San Antonia, TX \n At&amp;t Centre"
                android:textColor="#0000FF"
                android:textSize="@dimen/textSize40" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/tv_date_time_details"
                style="@style/styleTextView_row"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:lines="2"
                android:maxLines="2"
                android:text="February 12, 2014\n 9:00 pm"
                android:textSize="@dimen/textSize40" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_110"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_flyer_tab"
                android:layout_width="@dimen/layout_336"
                android:layout_height="@dimen/layout_95"
                android:background="@drawable/bg_tab_left_normal"
                android:clickable="true"
                android:onClick="onClick"
                android:orientation="vertical" >

                <TextView
                    style="@style/styleTextView_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/s_flyer" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_info_tab"
                android:layout_width="@dimen/layout_336"
                android:layout_height="@dimen/layout_95"
                android:background="@drawable/bg_tab_center_normal"
                android:clickable="true"
                android:onClick="onClick"
                android:orientation="vertical" >

                <TextView
                    style="@style/styleTextView_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/s_info" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_comments_tab"
                android:layout_width="@dimen/layout_336"
                android:layout_height="@dimen/layout_95"
                android:background="@drawable/bg_tab_right_normal"
                android:clickable="true"
                android:onClick="onClick"
                android:orientation="vertical" >

                <TextView
                    style="@style/styleTextView_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/s_comments" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ll_viewFlyer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/iv_flyer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:scaleType="fitXY" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_post_cmt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_1000"
                    android:layout_margin="@dimen/layout_30"
                    android:orientation="vertical"
                    android:visibility="visible" >

                     <Button
                        android:id="@+id/btn_post_cmt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_135"
                        android:background="@drawable/bg_skeebar"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:text="@string/s_post_cmt"
                        android:textColor="#ffffff" />

                    <ListView
                        android:id="@+id/list_cmt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/layout_20"
                        android:textColor="#ffffff" >
                    </ListView>
                   
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_30"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <LinearLayout
                        android:id="@+id/ll_view_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/styleTextView_row"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/layout_110"
                            android:layout_marginLeft="@dimen/layout_20"
                            android:gravity="center"
                            android:text="@string/s_view_map" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="@dimen/layout_25"
                            android:layout_height="@dimen/layout_40"
                            android:layout_margin="@dimen/layout_40"
                            android:src="@drawable/arrow" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_5"
                        android:background="#cccccc" />

                    <LinearLayout
                        android:id="@+id/ll_purchase_tickets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/styleTextView_row"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/layout_20"
                            android:gravity="center"
                            android:text="@string/s_purchase_tickets" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="@dimen/layout_25"
                            android:layout_height="@dimen/layout_40"
                            android:layout_margin="@dimen/layout_40"
                            android:src="@drawable/arrow" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_5"
                        android:background="#cccccc" />

                    <LinearLayout
                        android:id="@+id/ll_check_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/styleTextView_row"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/layout_20"
                            android:gravity="center"
                            android:text="@string/s_check_in" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <ImageView
                            android:layout_width="@dimen/layout_25"
                            android:layout_height="@dimen/layout_40"
                            android:layout_margin="@dimen/layout_40"
                            android:src="@drawable/arrow" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>